--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,9 +4,9 @@
 <div class="container">
     <div>
         <h1>Hello Spring</h1>
-        <p>회원 기능</p>
+        <p>트레이딩</p>
         <p>
-            <a href="/members/new">회원 가입</a> <a href="/members">회원 목록</a>
+            <a href="/Stocks/new">주식 등록</a> <a href="/Stocks">주식 목록</a>
         </p></div>
 </div> <!-- /container -->
 </body>
