stocks templates 생성

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
         <h1>Hello Spring</h1>
         <p>트레이딩</p>
         <p>
-            <a href="/Stocks/new">주식 등록</a> <a href="/Stocks">주식 목록</a>
+            <a href="/stocks/new">주식 등록</a> <a href="/stocks">주식 목록</a>
         </p></div>
 </div> <!-- /container -->
 </body>
