--- a/src/main/resources/templates/stocks/createStock.html
+++ b/src/main/resources/templates/stocks/createStock.html
@@ -2,12 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="container">
-    <form action="/members/new" method="post">
-        <div class="form-group">
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name" placeholder="이름을
-    입력하세요"> </div>
-        <button type="submit">등록</button> </form>
+    <form action="/stocks/new" method="post">
+        <button type="submit">업데이트</button> </form>
 </div> <!-- /container -->
 </body>
 </html>
